# Rattus

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  Rattus.cabal  Setup.hs  leak-test  stack.yaml
.github/workflows/: ci.yml
examples/game/: Rattus-game.cabal
examples/game-arrow/: Rattus-game-arrow.cabal  cabal.project  stack.yaml
examples/game-arrow/src/: Behaviour.hs  Game.hs
examples/game-monadic/: Rattus-game-monadic.cabal  Rattus-game.cabal  stack.yaml
examples/game-monadic/src/: Behaviour.hs  Game.hs  MStream.hs
examples/game-multi/: Rattus-game-multi.cabal  cabal.project
examples/game-multi/src/: Behaviour.hs  Game.hs
examples/game/src/: Behaviour.hs  Game.hs
src/: Rattus.hs
src/Rattus/: Arrow.hs  Event.hs  Events.hs  Future.hs  MStream.hs  Plugin.hs  Primitives.hs  Stream.hs  Strict.hs  ToHaskell.hs  Yampa.hs
src/Rattus/Plugin/: Annotation.hs  CheckSingleTick.hs  Dependency.hs  ScopeCheck.hs  SingleTick.hs  StableSolver.hs  Strictify.hs  Utils.hs
test/: IllTyped.hs  IllTyped.hs.bak  MemoryLeak.hs  MemoryLeak.hs.bak  NewlyTyped.hs  Rewrite.hs  TimeLeak.hs  TimeLeak.hs.bak  WellTyped.hs  WellTyped.hs.bak
