cabal-version:       >=1.10

name:                Rattus-game-multi
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
author:              Patrick Bahr
maintainer:          patrick.bahr@gmail.com
-- copyright:
-- category:
build-type:          Simple

                    

executable game
  hs-source-dirs:      src
  main-is:             Game.hs
  other-modules:       Behaviour
  default-language:    Haskell2010
  build-depends:       Rattus, base, gloss
  ghc-options:         -fplugin=Rattus.Plugin